avoid reference parsing errors